@@ -1,3 +1,12 @@
+2004-11-08  Darin Adler  <darin@apple.com>
+
+        Reviewed by John.
+
+        - fixed <rdar://problem/3825966> 8A274 Safari crashes closing window: QTimer::fire() with MallocStackLogging and MallocScribble enabled
+
+        * kwq/KWQTimer.mm: (QTimer::fire): Rearrange so we don't access the QTimer object after calling code
+        that possibly deletes the QTimer.
+
 2004-11-08  Chris Blumenberg  <cblu@apple.com>
 
 	Fixed: <rdar://problem/3783904> Return key behavior is confusingly different between popup menus and autofill menus
@@ -464,7 +473,7 @@
 
 2004-10-29  Darin Adler  <darin@apple.com>
 
-        Reviewed by NOBODY (OOPS!).
+        Reviewed by Kevin.
 
         - fixed <rdar://problem/3751619> Safari crash in khtml::CircularSearchBuffer::append(QChar const&)
 
